@@ -6983,3 +6983,5 @@ v0.92.0.11:
 0.97.3.1:
   - Fix outlaws teleporting into towns they're outlawed in using /n spawn, courtesy of Warriorrrr with PR #5461. 
   - Populate bukkit's /help towny page.
+  - Add actionbar and bossbar messaging to TownyMessaging.
+  - Re-jigger the ChunkNotifications showing code.
